cleanup (remove outdated code)